--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           clientId: ${{ secrets.STACKPULSE_CLIENT_ID }}
           clientSecret: ${{ secrets.STACKPULSE_CLIENT_SECRET }}
-          yamlFile: test/playbook.yaml
+          yamlFile: /github/workspace/test/playbook.yaml
 
   apply-trigger:
     name: Apply trigger action
@@ -29,5 +29,5 @@ jobs:
         with:
           clientId: ${{ secrets.STACKPULSE_CLIENT_ID }}
           clientSecret: ${{ secrets.STACKPULSE_CLIENT_SECRET }}
-          yamlFile: test/trigger.yaml
+          yamlFile: /github/workspace/test/trigger.yaml
           yamlType: trigger
